# process_runnner

./: .clang-tidy  .gitignore  Application.h.in  CMakeLists.txt  Jenkinsfile  vcpkg.json  x64-win-linux-mixed.cmake
.devcontainer/: Dockerfile  devcontainer.json
client_entry_point/: CMakeLists.txt
client_entry_point/src/: entry_point.cpp
config/: key_file_map.json
data_models/: CMakeLists.txt
data_models/inc/: data_models.h  data_models_process_runner.h  protobuf_helper.h
data_models/interfaces/: process_runner.proto
data_models/src/: data_models.cpp  data_models_process_runner.cpp  protobuf_helper.cpp
entry_point_client/: CMakeLists.txt
entry_point_client/inc/: globalerrorhandler.h
entry_point_client/src/: entry_point.cpp
entry_point_server/: CMakeLists.txt
entry_point_server/src/: entry_point.cpp
pipeline/: CMakeLists.txt
pipeline/inc/: pipeline.h
pipeline/src/: pipeline.cpp
pipeline_remote/: CMakeLists.txt
pipeline_remote/inc/: pipeline_remote.h
pipeline_remote/src/: pipeline_remote.cpp
process_runner/: CMakeLists.txt
process_runner/inc/: process_runner.h  process_runner_manager.h
process_runner/src/: process_runner.cpp  process_runner_manager.cpp
process_runner_client/: CMakeLists.txt
process_runner_client/inc/: process_runner_client.h  process_runner_service_caller.h
process_runner_client/src/: process_runner_client.cpp  process_runner_service_caller.cpp
process_runner_service/: 1.txt  CMakeLists.txt
process_runner_service/inc/: process_runner.h  process_runner_service.h  process_runner_service_run.h
process_runner_service/src/: process_runner.cpp  process_runner_service.cpp  process_runner_service_run.cpp
production_docker/: build.bat  build.sh  entry_point_server.Dockerfile
server_entry_point/: CMakeLists.txt
server_entry_point/inc/: version_info.h
server_entry_point/src/: entry_point.cpp
tests/: CMakeLists.txt  tests.cpp
vlogger/: CMakeLists.txt
vlogger/inc/: elapsed_time.h  logging.h
vlogger/src/: ConfigFile.cpp  logging.cpp
vutilities/: CMakeLists.txt
vutilities/inc/: utilities.h
vutilities/src/: utilities.cpp
